[package]
name = "bsky_direct_messages"
version = "0.1.0"
edition = "2021"

#cargo-features = ["public-dependency"]

[dependencies]
reqwest = "0.11.10"
clap = { version = "3.2.0", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.21.2", features = ["full"] }

