[package]
name = "bsky_direct_messages"
version = "0.1.0"
edition = "2021"

#cargo-features = ["public-dependency"]

[dependencies]
reqwest = "0.12.12"
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0"
atrium-api = "0.24.10"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
ably = "0.2.0"
